[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotrade"
version = "1.0.0"
description = "AI-driven automated trading system for China A-Share markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9.0", "websockets>=12.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "black>=23.0"]

[project.scripts]
neurotrade = "neurotrade.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["neurotrade*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
